$Id$

EPSA Crop 6.x-1.0, 2011-01-08
-----------------------------
Fixed #1009608 by adr_p: Two presets selected simultaneously


EPSA Crop 6.x-1.0, 2010-08-09
-----------------------------
Fixed by mrfelton, dboulet: Compatibility with jQuery 1.3
Added creation of thumbs for cropping
Fixed #837014 by pelicani: The Init function limits user profiles.
Fixed #822678 by Odd Hill: Failed to load resource: unsupported URL.
Added #725310 by mrfelton: Add support Libraries for Jcrop
Added #859870 by mathieu: Add action crops on URL call instead of theme function
Added #793722 by pkej, yan_nick: Support for rounded corners and all other modules wich interact with imagecache

EPSA Crop 6.x-0.1-beta2, 2010-02-24
-----------------------------------
Fixed #665242 by valic: Multilingual site
Fixed #603234 by yvmarques: Preview image not displayed
Added by yvmarques: Various performances tweak 

EPSA Crop 6.x-0.1-beta1, 2009-10-12
-----------------------------------
Initial release of epsacrop module.