@@ -33,9 +33,10 @@ function epsacrop_init() {
  */
 function epsacrop_menu() {
   $items = array();
-  $items['crop/dialog'] = array(
+  $items['crop/dialog/%/%'] = array(
     'title' => 'Dialog Crop',
     'page callback' => 'epsacrop_dialog',
+    'page arguments' => array(2, 3),
     'access callback' => TRUE,
     'type' => MENU_CALLBACK
   );
@@ -72,9 +73,14 @@ function epsacrop_menu_alter(&$items) {
 
 /**
  * Callback function for Dialog popup.
+ *
+ * @param string $type_name
+ *   Content type machine name, e.g. 'page'.
+ * @param string $field_name
+ *   CCK imagefield name, e.g. 'field_image'.
  * 
  */
-function epsacrop_dialog() {
+function epsacrop_dialog($type_name, $field_name) {
   $args = func_get_args();
   $out ='<div class="epsacrop-global">'."\n";
   $out .='<div class="epsacrop-image-crop">'."\n";
@@ -83,7 +89,7 @@ function epsacrop_dialog() {
   $out .='<div class="epsacrop-presets-menu">'."\n";
   $out .='<ul class="epsacrop-presers-menu-ul">'."\n";
   $i = 0;
-  $crop_actions = _epsacrop_get_crop_actions();
+  $crop_actions = _epsacrop_get_field_actions($type_name, $field_name);
   foreach ($crop_actions as $action) {
     $id = 'epsacrop-'. $action['presetname'];
     $out .='<li class="epsacrop-presers-menu-li"><a id="'. $id .'" href="javascript:EPSACrop.crop(\''. $id .'\');" rel="'. $action['width'] .'x'. $action['height'] .'"'. ($i == 0 ? ' class="selected"' : '') .'>'. $action['presetname'] .'</a></li>';
@@ -313,7 +319,9 @@ function epsacrop_theme($existing, $type, $theme, $path) {
  * fonction theme qui ajouter le lien gérer le crop
  */
 function theme_epsacrop_widget_item($element) {
-  if ((int) $element['fid']['#value'] > 0) {
+  $type_name = $element['#type_name'];
+  $field_name = $element['#field_name'];
+  if ((int) $element['fid']['#value'] > 0 && count(_epsacrop_get_field_actions($type_name, $field_name))) {
     $fid = (int) $element['fid']['#value'];
     $filepath = _epsacrop_get_path_from_fid($fid);
     if (!empty($filepath)) {
@@ -322,7 +330,7 @@ function theme_epsacrop_widget_item($element) {
       $filepath = _epsacrop_thumb_filepath($filepath);
       $element['epsacrop'] = array(
         '#type' => 'markup',
-        '#value' => '[<a rel="nozoom" href="javascript:EPSACrop.dialog(\''. $element['fid']['#value'] .'\', \''. $base_root . base_path() . addslashes($filepath) .'\', ['. $info[0] .', '. $info[1] .']);">'. t("Manage image crops") .'</a>]'
+        '#value' => '[<a rel="nozoom" href="javascript:EPSACrop.dialog(\''. $type_name .'\', \''. $field_name .'\', \''. $element['fid']['#value'] .'\', \''. $base_root . base_path() . addslashes($filepath) .'\', ['. $info[0] .', '. $info[1] .']);">'. t("Manage image crops") .'</a>]'
       );
     }
   }
@@ -474,4 +482,85 @@ function _epsacrop_get_crop_actions() {
   }
 
   return $actions;
+}
+
+/**
+ *Helper function for returning simple array with only imagecache preset actions with croping.
+ */
+function _epsacrop_get_crop_presets() {
+  $actions = _epsacrop_get_crop_actions();
+  $presets =  array();
+  foreach ($actions as $preset) {
+    $presets[$preset['presetname']] = $preset['presetname'];
+  }
+
+  return $presets;
+}
+
+
+/**
+ * Helper function for returning only imagecache preset actions with croping that was enabled for specific field.
+ *
+ * @param string $type_name
+ *   Content type machine name, e.g. 'page'.
+ * @param string $field_name
+ *   CCK imagefield name, e.g. 'field_image'.
+ *
+ * @return Structured array, e.g.:
+ *   array(
+ *      0 => array(
+ *        'presetname' => 'presetname',
+ *        'width'      => 400,
+ *        'height'     => 300,
+ *      ),
+ *      1 => ...
+ *   )
+ */
+function _epsacrop_get_field_actions($type_name, $field_name) {
+  $actions = _epsacrop_get_crop_actions();
+  $content_type = content_types($type_name);
+  $presets = $content_type['fields'][$field_name]['widget']['epsacrop_presets'];
+  $presets = array_flip($presets);
+  foreach ($actions as $key => $action) {
+    if (!array_key_exists($action['presetname'], $presets)) {
+      unset($actions[$key]);
+    }
+  }
+  return $actions;
+}
+
+/**
+ * Implementation of hook_widget_settings_alter().
+ */
+function epsacrop_widget_settings_alter(&$settings, $op, $widget) {
+  $widget_type = isset($widget['widget_type']) ? $widget['widget_type'] : $widget['type'];
+  // Alter only imagefied_widget
+  if ($widget_type != 'imagefield_widget') {
+    return;
+  }
+
+  // Add our new options to the list of settings to be saved.
+  if ($op == 'save') {
+    $settings = array_merge($settings, array('epsacrop_presets'));
+  }
+
+  // Add the additional settings to the form.
+  $presets = _epsacrop_get_crop_presets(); 
+  if ($op == 'form') {
+    $settings['epsacrop'] = array(
+      '#type' => 'fieldset',
+      '#title' => t('EPSA Crop'),
+      '#collapsible' => TRUE,
+      '#collapsed' => TRUE,
+      '#description' => t('These options allow the user to pick imagecache presets that would be available to crop.'),
+      '#weight' => 15,
+    );
+    $settings['epsacrop']['epsacrop_presets'] = array(
+      '#title' => t('Imagecache presets'),
+      '#type' => 'checkboxes',
+      '#default_value' => (($widget['epsacrop_presets'] != NULL) ? $widget['epsacrop_presets'] : array()),
+      '#options' => $presets,
+      '#description' => t('Only presets utilising crop filter are available'),
+    );
+  }
 }
